[package]
name = "redis_test"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]
edition = "2018"

[dependencies]
#redis = "0.15.1"
tokio = { version = "0.2.20", features = ["full"] }
futures-util = "0.3.4"
smol = { version = "0.1", features = ["tokio02"] }

redis-async = "0.6.2"
futures = "0.3.4"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"